// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonWithTooltip> with blank disableReason renders 1`] = `
<Button
  className="foo"
>
  Press me
</Button>
`;

exports[`<ButtonWithTooltip> with disableReason and isAriaDisabled renders 1`] = `
<Tooltip
  content="Parachute required"
>
  <Button
    className="foo"
    isAriaDisabled={true}
  >
    Eject
  </Button>
</Tooltip>
`;

exports[`<ButtonWithTooltip> with isAriaDisabled renders 1`] = `
<Button
  className="foo"
  isAriaDisabled={true}
>
  Not clickable
</Button>
`;

exports[`<ButtonWithTooltip> with node disableReason renders 1`] = `
<Tooltip
  content={
    <Text>
      Unsupported.
       
      <Link
        to="http://example.com"
      >
        Learn more
      </Link>
    </Text>
  }
>
  <Button
    className="foo"
    isAriaDisabled={true}
  >
    Teleport
  </Button>
</Tooltip>
`;

exports[`<ButtonWithTooltip> with string disableReason renders 1`] = `
<Tooltip
  content="Unsafe in hyperspace"
  position="right"
>
  <Button
    className="foo"
    isAriaDisabled={true}
  >
    Teleport
  </Button>
</Tooltip>
`;

exports[`<ButtonWithTooltip> without disableReason renders 1`] = `
<Button
  className="foo"
>
  Press me
</Button>
`;
